sadkomed_first/test-metallb-ingress-external-relma.yaml

apiVersion: v1
kind: Service
metadata:
    name: relma-external
    namespace: default
spec:
  ports:
  - port: 8000
    protocol: TCP

---

apiVersion: v1
kind: Endpoints
metadata:
  name: relma-external
  namespace: default
subsets:
  - addresses:
    - ip: 192.168.253.200
    ports:
    - port: 8000

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: relma-web
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx
  rules:
  - host: relma.sadkomed.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: relma-external
            port:
              number: 8000
