sadkomed_first/test-metallb-ingress-external-sema.yaml

apiVersion: v1
kind: Service
metadata:
    name: rsema-external
    namespace: default
spec:
  ports:
  - port: 3000
    protocol: TCP

---

apiVersion: v1
kind: Endpoints
metadata:
  name: rsema-external
  namespace: default
subsets:
  - addresses:
    - ip: 192.168.9.98
    ports:
    - port: 3000

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rsema-web
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - relma.sadkomed.ru
    secretName: sadkomed-tls
  rules:
  - host: rsema.sadkomed.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rsema-external
            port:
              number: 3000
