sadkomed_first/test-metallb_ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-test-deployment
  labels:
    app: my-k8s
    env: test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
        - name: new-test
          image: karen52rus/k8s:v1.1
          ports:
            - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
    name: test-metallb
    namespace: default
spec:
    selector:
      app: test
    ports:
    - port      : 80
      targetPort: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-web
  namespace: default
  annotation:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: test.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-web
            port:
              number: 80
